feat: Add getting roles (#103)